syntax="proto2";
package msg;
option csharp_namespace="Pb";

enum EMsg{

    // 注册
    C2S_Register_Req_ID     = 0x00000001;
    S2C_Register_Res_ID     = 0x00000002;

    // 登陆
    C2S_Login_Req_ID        = 0x00000003;
    S2C_Login_Res_ID        = 0x00000004;
    
    // 登出
    C2S_Logout_Req_ID       = 0x00000005;
    S2C_Logout_Res_ID       = 0x00000006;
    
    // 创建角色
    C2S_Create_Char_Req_ID  = 0x00000007;
    S2C_Create_Char_Res_ID  = 0x00000008;

    // 进入游戏
    C2S_Enter_World_Req_ID  = 0x00000009;
    S2C_Enter_World_Res_ID  = 0x0000000A;

    // 同步角色
    C2S_Sync_Player_Req_ID  = 0x0000000B;
    S2C_Sync_Player_Res_ID  = 0x0000000C;
    
    // 更新位置
    C2S_Move_Req_ID   = 0x0000000D;
    
    // 广播消息
    S2C_Broad_Cast_ID       = 0x0000FF00;
}

// 广播消息类型
enum EBC{
    Talk                    = 0x0001;
    Sync                    = 0x0002;
    Action                  = 0x0003;
}

// 基础消息类型
message Player{
    optional int32      pid     = 1;
    optional Position   pos     = 2;
}

message Position{
    optional float  X           = 1;
    optional float  Y           = 2;
    optional float  Z           = 3;
    optional float  V           = 4;
}



message C2S_Register_Req{
    optional string userName    = 1;
    optional string password    = 2;
}

message S2C_Register_Res{
    optional bool result        = 1;
    optional int32 errorCode    = 2;
    optional string errorStr    = 3;
}


message C2S_Login_Req{
    optional string userName    = 1;
    optional string password    = 2;
}

message S2C_Login_Res{
    optional bool result        = 1;
    optional int32 errorCode    = 2;
    optional string errorStr    = 3;
}

message C2S_Logout_Req{
    // Empty Message
}

message S2C_Logout_Res{
    optional bool result        = 1;
    optional int32 errorCode     = 2;
    optional string errorStr    = 3;
}

message C2S_Create_Char_Req{
    optional int32 charType     = 1;
    optional string roleName    = 2;
}

message S2C_Create_Char_Res{
    optional bool result        = 1;
    optional int32 errorCode    = 2;
    optional string errorStr    = 3;
    optional int32 roleId       = 4;
    optional int32 charType     = 5;
    optional string charName    = 6;
}

message C2S_Enter_World_Req{
    optional int32 pid         = 1;
}

message S2C_Enter_World_Res{
    optional bool result        = 1;
    optional int32  errorCode   = 2;
    optional string errorStr    = 3;
    optional int32 pid          = 4;
}

message C2S_Sync_Player_Req{
    optional int32  pid         = 1;
}

message S2C_Sync_Player_Res{
    optional Player  player     = 1;
}

message C2S_Move_Req{
    optional Position   pos     = 1;
    optional int32      action  = 2;
}

message BroadCast{
    optional int32  Pid = 1;
    optional int32  Tp  = 2;
    oneof  Data{
        string      content         = 3;
        Position    pos             = 4;
        int32       action          = 5;
    }
}

